tests/error/tracing_errors/no_return.py
from guppylang.decorator import guppy


@guppy.comptime
def test() -> int:
    pass


guppy.compile(test)
