tests/error/tracing_errors/no_return.err
Error: Type mismatch (at $FILE:5:0)
  | 
3 | 
4 | @guppy.comptime
5 | def test() -> int:
  | ^^^^^^^^^^^^^^^^^^
6 |     pass
  | ^^^^^^^^ Expected return value of type `int`, got `None`

Guppy compilation failed due to 1 previous error
